--- a/client-web/src/stylesheets/index.scss
+++ b/client-web/src/stylesheets/index.scss
@@ -3,6 +3,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400&display=swap');
 
+$dark: #111111;
+$light: #eeeeee;
+
 html, body {
   position: relative;
   margin: 0;
@@ -13,6 +16,8 @@ html, body {
   max-height: 100%;
   width: 100%;
   height: 100%;
+  background-color: $dark;
+  color: $light;
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
 }
@@ -40,6 +45,7 @@ a {
     left: -2px;
     height: 2px;
     opacity: 0;
+    background-color: $light;
     transform: translateY(5px);
 
     transition: all 0.25s ease-out;
@@ -66,6 +72,11 @@ a {
 
 #app {
   @extend .absolute-fill;
+  background-color: $dark;
+  color: $light;
+
+  transition: all 0.25s linear;
+  transition-property: background-color, color;
 }
 
 header {
@@ -113,6 +124,10 @@ div[data-vjs-player="true"] {
   padding-top: 56.25%;
   border-radius: 10px;
   overflow: hidden;
+  background-color: $dark;
+  box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.5);
+
+    transition: box-shadow 0.25s linear;
 
   video {
     @extend .absolute-fill;
