allow regenerate key

--- a/client-web/src/stylesheets/index.scss
+++ b/client-web/src/stylesheets/index.scss
@@ -256,6 +256,8 @@ header {
   text-align: center;
 
   h2 { margin-bottom: 60px; }
+  
+  .more-details-soon { margin-top: 60px; }
 }
 
 .video-player-container {
