--- a/client-web/src/stylesheets/index.scss
+++ b/client-web/src/stylesheets/index.scss
@@ -289,13 +289,25 @@ header {
   border-radius: 2%/4%;
   background-color: $light;
   box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.25);
-  overflow: hidden;
 
   transition: all 0.25s linear;
   transition-property: background-color, box-shadow;
 
+  .now-streaming {
+    display: flex;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -40px;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+  }
+
   .video-player {
     @extend .absolute-fill;
+    border-radius: 2%/4%;
+    overflow: hidden;
 
     & > div {
       width: 100%;
