--- a/client-web/src/stylesheets/index.scss
+++ b/client-web/src/stylesheets/index.scss
@@ -327,6 +327,8 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: 2%/4%;
+    overflow: hidden;
     background-color: $light;
 
     transition: background-color 0.25s linear;
