--- a/client-web/src/stylesheets/index.scss
+++ b/client-web/src/stylesheets/index.scss
@@ -335,7 +335,7 @@ header {
 
   .video-player {
     @extend .absolute-fill;
-    border-radius: 2%/4%;
+    // border-radius: 2%/4%;
     overflow: hidden;
 
     &>div {
@@ -358,9 +358,15 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 2%/4%;
+    // border-radius: 2%/4%;
     overflow: hidden;
     background-color: $light;
+
+    &--offair {
+      background-image: url('../images/off-air.svg');
+      background-size: cover;
+      background-position: center;
+    }
 
     transition: background-color 0.25s linear;
   }
